<resources>
    <string name="app_name">Android App 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="google_map_api_key">AIzaSyBAT1w4gM4pBa9DvEs2oHSoJsyHhwCS_Qw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_review_picture">Choose photo</string>
    <string name="review_image">photo\n</string>
    <string name="from">FROM</string>
    <string name="To">TO\n</string>
    <string name="item_image">item image\n</string>
    <string name="item_name">Item name\n</string>
    <string name="item_weight">Weight\n</string>
    <string name="pay_for_shipping">Paying for Shipping</string>
    <string name="from_location">Shipping FROM</string>
    <string name="to_location">Shipping TO</string>
    <string name="item_description">Item description</string>
    <string name="add_post">Post</string>
    <string name="weight">weight</string>
    <string name="paying">Paying?</string>
    <string name="complete">ShipIt</string>
    <string name="post_image_description">Post Image</string>
    <string name="postId">postId</string>

</resources>